--- a/O_Salsicha/data/style.css
+++ b/O_Salsicha/data/style.css
@@ -1,25 +1,102 @@
-html {
-    font-family: Helvetica;
-    display: inline-block;
-    margin: 0px auto;
-    text-align: center;
-  }
-  h1{
-    color: #0F3376;
-    padding: 2vh;
-  }
-  p{
-    font-size: 1.5rem;
-  }
-  .button {
-    display: inline-block;
-    background-color: #008CBA;
-    border: none;
-    border-radius: 4px;
-    color: white;
-    padding: 16px 40px;
-    text-decoration: none;
-    font-size: 30px;
-    margin: 2px;
-    cursor: pointer;
-  }
+@charset "UTF-8";
+
+:root{
+  --corBack: #5E6570;
+  --corBackMain: #739CE1;
+  --cor1:  #202733;
+  --cor2: #687B9B;
+  --cor3: #90AAD7;
+  --cor4: #5E6570;
+
+  --fonte: Helvetica, Arial, Verdana, sans-serif;
+}
+
+html{
+  font-family: var(--fonte);
+}
+
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
+body {
+  background-color: var(--corBack);
+  max-width: 800px;
+  min-width: 500 px;
+  margin: auto;
+  box-shadow: 0px 0px 15px black;
+}
+
+main{
+  background-color: var(--corBackMain);
+  padding: 20px;
+  margin: auto;
+  text-align: center;
+}
+
+header{
+  color: white;
+  background-color: var(--cor1);
+  padding: 20px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  text-align: center;
+}
+
+.container{
+  /*overflow: hidden; */
+  border: 3px solid black;
+  background-color: var(--cor3);
+  padding: 0px 0px 10px 0px;
+  margin: 15px;
+}
+
+.leitura {
+  padding: 10px;
+  border-bottom: 3px solid black;
+}
+
+.config{
+  padding: 10px;
+}
+
+h2{
+  background-color: var(--cor4);
+  color: white;
+  padding: 5px;
+  border-bottom: 3px solid black;
+}
+
+h3{
+  font-weight: bolder;
+  padding: 10px;
+}
+
+.config h3{
+  font-size: 1.5rem;
+  text-decoration: underline;
+}
+
+p{
+  padding: 5px;
+}
+
+.botao {
+  display: inline-block;
+  background-color: var(--cor4);
+  border-radius: 4px;
+  color: white;
+  padding: 2px;
+  cursor: pointer;
+}
+
+footer{
+  background-color: var(--cor1);
+  color:white;
+  margin: auto;
+  text-align: center;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  font-size: 0.8rem;
+}
