--- a/O_Salsicha/data/style.css
+++ b/O_Salsicha/data/style.css
@@ -66,11 +66,13 @@ h2{
   color: white;
   padding: 5px;
   border-bottom: 3px solid black;
+  font-size:  1.8rem;
 }
 
 h3{
   font-weight: bolder;
   padding: 10px;
+  font-size: 1.5rem;
 }
 
 .config h3{
@@ -80,6 +82,10 @@ h3{
 
 p{
   padding: 5px;
+}
+
+.meuinput{
+  height: 1.5rem;
 }
 
 .botao {
